--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>onebean.data.redis</artifactId>
     <packaging>jar</packaging>
 
-    <name>eakay.data.redis</name>
+    <name>data.redis</name>
     <description>redis操作API</description>
 
 
@@ -41,17 +41,12 @@
         <dependency>
             <groupId>net.onebean</groupId>
             <artifactId>net.onebean.core</artifactId>
-            <version>${net.onebean.core.version}</version>
+            <version>${core.version}</version>
             <scope>provided</scope>
         </dependency>
 
     </dependencies>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <net.onebean.core.version>2.0.0.RELEASE</net.onebean.core.version>
-    </properties>
 
     <licenses>
         <license>
