--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>net.onebean</groupId>
         <artifactId>onebean.boot.stater</artifactId>
-        <version>1.0.1.RELEASE</version>
+        <version>1.0.2.RELEASE</version>
     </parent>
 
     <version>1.0.0.RELEASE</version>
-    <artifactId>onebean.data.redis</artifactId>
+    <artifactId>net.onebean.data.redis</artifactId>
     <packaging>jar</packaging>
 
     <name>data.redis</name>
