--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
     <parent>
         <groupId>net.onebean</groupId>
-        <artifactId>onebean.boot.stater</artifactId>
-        <version>1.0.2.RELEASE</version>
+        <artifactId>net.onebean.dependencies</artifactId>
+        <version>1.0.0.RELEASE</version>
     </parent>
 
-    <version>1.0.0.RELEASE</version>
+    <version>1.0.1.RELEASE</version>
     <artifactId>net.onebean.data.redis</artifactId>
     <packaging>jar</packaging>
 
@@ -31,140 +31,17 @@
         </dependency>
         <!-- redis -->
 
-        <!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
-            <version>3.10.3</version>
         </dependency>
 
         <dependency>
             <groupId>net.onebean</groupId>
             <artifactId>net.onebean.core</artifactId>
-            <version>${core.version}</version>
             <scope>provided</scope>
         </dependency>
 
     </dependencies>
-
-
-
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-
-    <scm>
-        <url>https://github.com/0nebean/net.onebean.data.redis</url>
-        <connection>git@github.com:0nebean/net.onebean.data.redis.git</connection>
-        <developerConnection>https://github.com/0nebean</developerConnection>
-    </scm>
-
-    <developers>
-        <developer>
-            <name>0neBean</name>
-            <email>pein790751571@aliyun.com</email>
-            <url>https://github.com/0nebean</url>
-        </developer>
-    </developers>
-
-
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>${java.version}</source>
-                            <target>${java.version}</target>
-                            <compilerArguments>
-                                <bootclasspath>${JAVA_HOME}/jre/lib/rt.jar</bootclasspath>
-                            </compilerArguments>
-                        </configuration>
-                    </plugin>
-
-                    <!-- Source -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>2.2.1</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jar-no-fork</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <!-- Javadoc -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.9.1</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <!-- GPG -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-            <distributionManagement>
-                <snapshotRepository>
-                    <id>repo-central</id>
-                    <name>snapshots</name>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-                </snapshotRepository>
-                <repository>
-                    <id>repo-central</id>
-                    <name>release</name>
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-            </distributionManagement>
-        </profile>
-    </profiles>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <compilerArguments>
-                        <bootclasspath>${JAVA_HOME}/jre/lib/rt.jar</bootclasspath>
-                    </compilerArguments>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
