--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
     <parent>
         <groupId>net.onebean</groupId>
         <artifactId>net.onebean.dependencies</artifactId>
-        <version>1.0.0.RELEASE</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <version>1.0.2.RELEASE</version>
+    <version>1.0.0-SNAPSHOT</version>
     <artifactId>net.onebean.data.redis</artifactId>
     <packaging>jar</packaging>
 
@@ -30,11 +30,6 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <!-- redis -->
-
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>net.onebean</groupId>
